Update: Tooltip inner doesn't need `word-wrap: break-word` fixed in BS4

--- a/packages/clay/src/scss/lexicon-base/_tooltip.scss
+++ b/packages/clay/src/scss/lexicon-base/_tooltip.scss
@@ -10,5 +10,4 @@
 	}
 
 	box-shadow: $tooltip-box-shadow;
-	word-wrap: break-word;
 }
